# EhgApp

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/aurelia_backend/: __main__.py  auth.py  backup.py  config.py  db.py  main.py  models.py  runtime.py  schemas.py  x402_client.py
docs/: design-tokens.md
src/: App.tsx  PrivyShell.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AgentsSurface.tsx  AsciiArtAnimation.tsx  AureliaLanding.tsx  CreateWorkspaceDialog.tsx  DashboardSurface.tsx  ErrorBoundary.tsx  ResearchOrgTree.tsx  SettingsSurface.tsx  TasksSurface.tsx  WalletSurface.tsx  WorkspaceSelector.tsx  workspaceStyles.ts
src/components/ui/: provider.tsx  tooltip.tsx
src/lib/: agentData.ts  api.ts  settings.ts  wallet.tsx  walletInner.tsx
src/theme/: system.ts  tokens.ts
